# Peng-vid

./: .env  .gitignore  README.md  pyproject.toml  scene_plan.json  voice_manifest.json
fal-integration/: chapters.py  pipeline.py  storyboard_pipeline.py
fal_integration_service/: __init__.py  art_styles.py  fal_face_swap.py  fal_image.py  fal_video.py  scenes.py  storyboard_pipeline.py
frontend/: index.css  index.html  index.tsx  main.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/components/: Aurora.css  Aurora.tsx
frontend/hooks/: useTypewriter.ts
pipeline_output/: final_manifest.json  scene_plan.json  voice_manifest.json
pipeline_output/2eb37964-ac9a-4caa-b8a6-a6ef625d8267/: final_manifest.json  scene_plan.json  voice_manifest.json
pipeline_output/elena_watercolor_3scenes/: final_manifest.json  scene_plan.json  voice_manifest.json
pipeline_output/elena_watercolor_3scenes_v2/: final_manifest.json  scene_plan.json  voice_manifest.json
pipeline_output/elena_watercolor_3scenes_v3/: final_manifest.json  scene_plan.json  voice_manifest.json
pipeline_output/elena_watercolor_3scenes_v4/: final_manifest.json  scene_plan.json  voice_manifest.json
pipeline_output/elena_watercolor_3scenes_v5/: scene_plan.json  voice_manifest.json
pipeline_output/elena_watercolor_3scenes_v6/: final_manifest.json  scene_plan.json  voice_manifest.json
pipeline_output/elena_watercolor_3scenes_v7/: final_manifest.json
text_extraction_service/: cli.py
video_pipeline_service/: __init__.py  api.py  cli.py
voice_gen_service/: __init__.py  cli.py
(+23 files in other folders)
