[project]
name = "text-breakdown"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fal-client",
    "fastapi",
    "imageio-ffmpeg",
    "gradium",
    "openai>=2.17.0",
    "python-multipart",
    "python-dotenv>=1.2.1",
    "requests",
    "uvicorn",
]

[project.scripts]
scene-plan = "text_extraction_service.cli:main"
voice-gen = "voice_gen_service.cli:main"
video-pipeline = "video_pipeline_service.cli:main"
