[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-breakdown"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fal-client",
    "fastapi",
    "imageio-ffmpeg",
    "gradium>=0.5.7",
    "openai>=2.17.0",
    "python-multipart",
    "python-dotenv>=1.2.1",
    "requests",
    "uvicorn",
]

[tool.hatch.build.targets.wheel]
packages = [
    "text_extraction_service",
    "voice_gen_service",
    "video_pipeline_service",
    "fal_integration_service",
]

[project.scripts]
scene-plan = "text_extraction_service.cli:main"
voice-gen = "voice_gen_service.cli:main"
video-pipeline = "video_pipeline_service.cli:main"
